# HomelabPowerMangeger

./: .gitignore  README.md  app.py  config.json  device-controller.service  manifest.json  pyproject.toml  requirements.txt
logs/: activity.csv
templates/: index.html  styles.css
